--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mein Portfolio</title>
+</head>
+<body>
+
+    <header>
+        <h1>Willkommen auf meiner Portfolio-Seite</h1>
+    </header>
+
+    <section>
+        <h2>Projekte</h2>
+        <!-- Fügen Sie hier Bilder und Beschreibungen Ihrer Projekte ein -->
+        <img src="/mnt/chromeos/MyFiles/Downloads/suminalffkim.github.io/figs/convers.jpg" alt="Projekt 1">
+        <p>Beschreibung des Projekts 1...</p>
+
+        <img src="/mnt/chromeos/MyFiles/Downloads/suminalffkim.github.io/figs/sheeps.jpg" alt="Projekt 2">
+        <p>Beschreibung des Projekts 2...</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2023 Mein Portfolio</p>
+    </footer>
+
+</body>
+</html>
