--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <section>
         <h2>Projekte</h2>
         <!-- Fügen Sie hier Bilder und Beschreibungen Ihrer Projekte ein -->
-        <img src="/mnt/chromeos/MyFiles/Downloads/suminalffkim.github.io/figs/convers.jpg" alt="Projekt 1">
+        <img src="/figs/convers.jpg" alt="Projekt 1">
         <p>Beschreibung des Projekts 1...</p>
 
-        <img src="/mnt/chromeos/MyFiles/Downloads/suminalffkim.github.io/figs/sheeps.jpg" alt="Projekt 2">
+        <img src="/figs/sheeps.jpg" alt="Projekt 2">
         <p>Beschreibung des Projekts 2...</p>
     </section>
 
