--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <!-- Fügen Sie hier Bilder und Beschreibungen Ihrer Projekte ein -->
         <img src="figs/convers.jpg" alt="Bild 1">
         <p>Beschreibung des Projekts 1...</p>
+        <!-- In der <section> Ihrer index.html -->
+<a href="aboutme.html">About Me</a>
 
         <img src="figs/sheeps.jpg" alt="Bild 2">
         <p>Beschreibung des Projekts 2...</p>
