--- a/index.html
+++ b/index.html
@@ -3,27 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Mein Portfolio</title>
 
-        <!-- CSS-Datei -->
-        <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <header>
-        <h1>Willkommen auf meiner Portfolio-Seite</h1>
+        <h1>Sumin Alff-Kim</h1>
+        <p>Physikerin</p>
     </header>
 
-    <section>
+    <section id="projects">
         <h2>Projekte</h2>
         <!-- Fügen Sie hier Bilder und Beschreibungen Ihrer Projekte ein -->
         <img src="figs/convers.jpg" alt="Bild 1">
         <p>Beschreibung des Projekts 1...</p>
-        <!-- In der <section> Ihrer index.html -->
-<a href="aboutme.html">About Me</a>
+
 
         <img src="figs/sheeps.jpg" alt="Bild 2">
         <p>Beschreibung des Projekts 2...</p>
+    </section>
+
+    <section id="about">
+<h2> About Me</h2>
+        <!-- In der <section> Ihrer index.html -->
+            <a href="aboutme.html">About Me</a>
     </section>
 
     <footer>
