--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <header>
         <h1>Sumin Alff-Kim</h1>
         <p>Physikerin</p>
+
+        <!---Naviagation-->
+        <nav>
+            <u1>
+                <li><a href="#projects">Projekte</a></li>
+            <li><a href="#about">About Me</a></li>
+            </u1>
+        </nav>
     </header>
 
     <section id="projects">
