--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <!---Naviagation-->
         <nav>
             <u1>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#projects">Projekte</a></li>
-            <li><a href="#about">About Me</a></li>
+                <li><a href="#about">About Me</a></li>
             </u1>
         </nav>
     </header>
